src/test/ui/parser/no-binary-float-literal.stderr
error: binary float literal is not supported
  --> $DIR/no-binary-float-literal.rs:5:5
   |
LL |     0b101.010;
   |     ^^^^^^^^^

error: aborting due to previous error

